# litestar-psycopg

./: README.md  pyproject.toml
.github/workflows/: codeql.yml  test.yml
examples/: base.py
litestar_psycopg/: __init__.py  __metadata__.py  config.py  plugin.py
